# qlog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
enc_temp_folder/eddb77c41970912e7b88fa44a96816/: main.cpp
src/: main.cpp  mylog.h  qlog.h  raylog.h
